Fix buttons layout issue on front page

--- a/src/index.css
+++ b/src/index.css
@@ -104,3 +104,16 @@ body {
     grid-template-columns: repeat(2, 1fr);
   }
 }
+
+.cs-buttons {
+  display: flex;
+  gap: 10px;
+  margin-top: 3rem;
+  flex-direction: column;
+}
+
+@media screen and (min-width: 1024px) {
+  .cs-buttons {
+    flex-direction: row;
+  }
+}
